# controller_patcher

./: .gitignore  .travis.yml  Adaptoid_N64.ini  CMakeLists.txt  ConfigReader.cpp  ConfigReader.hpp  ControllerPatcher.cpp  ControllerPatcher.hpp  ControllerPatcherWrapper.cpp  ControllerPatcherWrapper.h  Makefile  README.md  config_parser.cpp  config_parser.h  config_reader.cpp  config_reader.h  config_values.cpp  config_values.h  controller_patcher.c  controller_patcher.h  cp_retain_vars.c  cp_retain_vars.h  docker-compose.yml  pad_const.c  pad_const.h  string_tools.cpp  string_tools.hpp
config/: ConfigParser.cpp  ConfigParser.hpp  ConfigValues.cpp  ConfigValues.hpp
docker/: Dockerfile
include/controller_patcher/: ControllerPatcher.hpp  ControllerPatcherDefs.h
network/: ControllerPatcherNet.cpp  ControllerPatcherNet.hpp  TCPServer.cpp  TCPServer.hpp  UDPClient.cpp  UDPClient.hpp  UDPServer.cpp  UDPServer.hpp
other/: devkitPPCupdatePPCr29.pl
patcher/: ControllerPatcherDefs.h  ControllerPatcherHID.cpp  ControllerPatcherHID.hpp  ControllerPatcherUtils.cpp  ControllerPatcherUtils.hpp
source/: ConfigReader.cpp  ConfigReader.hpp  ControllerPatcher.cpp  ControllerPatcher.hpp  ControllerPatcherDefs.h  ControllerPatcherIncludes.hpp
source/config/: ConfigParser.cpp  ConfigParser.hpp  ConfigValues.cpp  ConfigValues.hpp
source/network/: CPTCPServer.cpp  CPTCPServer.hpp  ControllerPatcherNet.cpp  ControllerPatcherNet.hpp  TCPServer.cpp  UDPClient.cpp  UDPClient.hpp  UDPServer.cpp  UDPServer.hpp  tcpserver.hpp
source/patcher/: ControllerPatcherHID.cpp  ControllerPatcherHID.hpp  ControllerPatcherUtils.cpp  ControllerPatcherUtils.hpp
source/utils/: CPRetainVars.cpp  CPRetainVars.hpp  PadConst.cpp  PadConst.hpp
utils/: CPFSUtils.cpp  CPFSUtils.hpp  CPRetainVars.cpp  CPRetainVars.hpp  CPStringTools.cpp  CPStringTools.hpp  ControllerPatcherThread.hpp  PadConst.cpp  PadConst.hpp
